--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 /*/
 !.gitignore
 !README.md
+!задание_на_курсовое_проектирование.doc
+!пояснительная_записка.docx
 !/src/
 !/design/
 !/crossbrowser/
